# yet-another-json-config

./: .gitignore  CHANGELOG.md  README.md  build.md  config.py  pyproject.toml
.github/workflows/: dependabot.yml  python-publish.yml
src/json_config/: __init__.py
src/yet_another_json_config/: yet_another_json_config.py
tests/: test.json  test_config.py
