[build-system]
requires = ['setuptools>=42']
build-backend = 'setuptools.build_meta'

[project]
name = "json-config-engmtcdrm"
version = "0.0.1"
authors = [
  { name="engmtcdrm", email="" },
]
description = "Reading json files as a configuration file, supports nested json values"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/engmtcdrm/json-config"
"Bug Tracker" = "https://github.com/engmtcdrm/json-config/issues"